new yolo model added

--- a/Training/irrigation/train.ipynb
+++ b/Training/irrigation/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c91685b1",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3651f13a",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
          "type": "float"
         }
        ],
-       "ref": "ab9d1854-da71-491e-b5f8-ae47b9f2268e",
+       "ref": "3465f91b-8798-4c69-8bf1-e3bf898da88c",
        "rows": [
         [
          "0",
@@ -270,7 +270,7 @@
        "4                   61917.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,15 +551,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "587a2ef3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Model, scalers, and encoders saved!\n"
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtorch\u001b[49m.save(model.state_dict(), \u001b[33m\"\u001b[39m\u001b[33mirrigation_model.pt\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjoblib\u001b[39;00m\n\u001b[32m      3\u001b[39m joblib.dump(scaler_X, \u001b[33m\"\u001b[39m\u001b[33mscaler_X.pkl\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'torch' is not defined"
      ]
     }
    ],
@@ -575,6 +579,39 @@
     "joblib.dump(le_crop, \"le_crop.pkl\")\n",
     "\n",
     "print(\"✅ Model, scalers, and encoders saved!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4b78d2b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Crop Types: [' Barley     ' ' Urad       ' ' Jackfruit  ' ' Ragi       '\n",
+      " ' Millet     ' ' Tea        ' ' Gram       ' ' Brinjal    '\n",
+      " ' Soybean    ' ' Mango      ' ' Ladyfinger ' ' Moong      '\n",
+      " ' Papaya     ' ' Maize      ' ' Litchi     ' ' Sugarcane  '\n",
+      " ' Groundnut  ' ' Cabbage    ' ' Sunflower  ' ' Rice       '\n",
+      " ' Potato     ' ' Mustard    ' ' Arhar      ' ' Onion      '\n",
+      " ' Cashew nut ' ' Cauliflower' ' Wheat      ' ' Chilli     '\n",
+      " ' Tomato     ' ' Guava      ']\n",
+      "Unique Soil Types: [' Red Soil       ' ' Gravelly Loam  ' ' Alluvial Soil  '\n",
+      " ' Mixed Loam Soil' ' Black Soil     ' ' Clay Loam      '\n",
+      " ' Laterite Soil  ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming df is already loaded and columns renamed as in the notebook\n",
+    "unique_crop_types = df['Crop_Type'].unique()\n",
+    "unique_soil_types = df['Soil_Type'].unique()\n",
+    "\n",
+    "print(\"Unique Crop Types:\", unique_crop_types)\n",
+    "print(\"Unique Soil Types:\", unique_soil_types)\n"
    ]
   }
  ],
